[package]
authors = ['Daniel Olano <daniel@olanod.com>']
build = 'build.rs'
description = 'Valiu Liquidity Network - Parachain'
edition = '2018'
homepage = 'https://github.com/valibre-org/node'
license = 'Unlicense'
name = 'vln-parachain'
repository = 'https://github.com/valibre-org/node'
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.7' }

[features]
default = []
runtime-benchmarks = [
    'vln-runtime/runtime-benchmarks'
]

[[bin]]
name = 'vln_parachain'
path = 'src/main.rs'

[dependencies]
derive_more = '0.15.0'
log = '0.4.14'
codec = { package = 'parity-scale-codec', version = '2.0.0' }
structopt = '0.3.8'
serde = { version = '1.0.119', features = ['derive'] }
hex-literal = '0.2.1'

# RPC related Dependencies
jsonrpc-core = '15.1.0'

# Local Dependencies
vln-runtime = { package = "vln-runtime", path = '../../runtime/' }

# Substrate Dependencies
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.7' }
frame-benchmarking-cli = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.7' }

pallet-transaction-payment-rpc = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.7' }

substrate-frame-rpc-system = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.7' }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7" }

## Substrate Client Dependencies
sc-basic-authorship = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.7' }
sc-chain-spec = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.7' }
sc-cli = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.7' }
sc-client-api = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.7' }
sc-consensus = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.7' }
sc-executor = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.7' }
sc-network = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.7' }
sc-keystore = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.7' }
sc-rpc = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.7' }
sc-rpc-api = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.7' }
sc-service = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.7", version = '0.9.0', features = ['wasmtime'] }
sc-telemetry = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.7' }
sc-transaction-pool = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.7' }
sc-tracing = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.7' }

## Substrate Primitive Dependencies
sp-api = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.7' }
sp-block-builder = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.7' }
sp-blockchain = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.7' }
sp-consensus = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.7' }
sp-consensus-aura = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.7' }
sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.7' }
sp-inherents = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.7' }
sp-keystore = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.7' }
sp-offchain = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.7' }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.7' }
sp-session = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.7' }
sp-timestamp = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.7' }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.7' }

# Cumulus dependencies
cumulus-client-consensus-aura = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.7' }
cumulus-client-consensus-common = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.7' }
cumulus-client-collator = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.7' }
cumulus-client-cli = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.7' }
cumulus-client-network = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.7' }
cumulus-client-service = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.7' }
cumulus-primitives-core = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.7' }
cumulus-primitives-parachain-inherent = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.7' }

# Polkadot dependencies
polkadot-primitives = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.7'}
polkadot-service = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.7'}
polkadot-cli = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.7', features = [ "rococo-native" ]}
polkadot-test-service = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.7' }
polkadot-parachain = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.7'}



