[package]
authors = ['Daniel Olano <daniel@olanod.com>']
build = 'build.rs'
description = 'Virto Network - Node'
edition = '2018'
homepage = 'https://github.com/virto-network/virto-node'
license = 'Unlicense'
name = 'virto-node'
repository = 'https://github.com/virto-network/virto-node'
version = '0.2.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
jsonrpc-core = "15.1.0"
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9", features = ['wasmtime']  }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9"  }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9"  }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9"  }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
serde_json = "1.0.41"
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
structopt = "0.3.21"
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
virto-runtime = { package = "virto-runtime", path = '../../runtime/', features = ['standalone'], version = '0.2.0' }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }

[features]
default = []
runtime-benchmarks = [
    'virto-runtime/runtime-benchmarks'
]

[[bin]]
name = 'virto_node'
path = 'src/main.rs'
