[package]
name = "pallet-asset-registry"
version = "0.0.1"
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
frame-benchmarking = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-assets = { workspace = true }
pallet-balances = { workspace = true }

xcm = { workspace = true }
pallet-xcm = { workspace = true }


virto-common = { workspace = true }

[dev-dependencies]
sp-core  = { workspace = true }
sp-io =  { workspace = true }
sp-keystore =  { workspace = true }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"sp-runtime/std",
	"sp-std/std",
	"pallet-assets/std",
	"pallet-balances/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"virto-common/std",
	"xcm/std",
	"pallet-xcm/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]