[package]
authors.workspace = true
description = "This pallet helps with all the necesary steps to correctly setup a community."
edition.workspace = true
license.workspace = true
homepage.workspace = true
name = "pallet-communities-manager"
repository.workspace = true
version = "0.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
fc-traits-gas-tank.workspace = true
fc-traits-tracks.workspace = true

frame-benchmarking = { workspace = true, optional = true }
frame-support.workspace = true
frame-system.workspace = true

pallet-communities.workspace = true
pallet-nfts.workspace = true
pallet-referenda.workspace = true

log.workspace = true

parity-scale-codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }

sp-runtime.workspace = true
sp-std.workspace = true

[dev-dependencies]
fc-traits-memberships.workspace = true
sp-core.workspace = true
sp-io.workspace = true

pallet-assets.workspace = true
pallet-assets-freezer.workspace = true
pallet-balances.workspace = true
pallet-ranked-collective.workspace = true
pallet-referenda-tracks.workspace = true
pallet-scheduler.workspace = true
virto-common = { workspace = true, default-features = false, features = [
	"runtime",
] }

[features]
default = ["std"]
std = [
	"fc-traits-gas-tank/std",
	"fc-traits-memberships/std",
	"fc-traits-tracks/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-assets/std",
	"pallet-assets-freezer/std",
	"pallet-balances/std",
	"pallet-communities/std",
	"pallet-nfts/std",
	"pallet-ranked-collective/std",
	"pallet-referenda-tracks/std",
	"pallet-referenda/std",
	"pallet-scheduler/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"virto-common/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"pallet-assets-freezer/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-communities/runtime-benchmarks",
	"pallet-nfts/runtime-benchmarks",
	"pallet-ranked-collective/runtime-benchmarks",
	"pallet-referenda-tracks/runtime-benchmarks",
	"pallet-referenda/runtime-benchmarks",
	"pallet-scheduler/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-assets/try-runtime",
	"pallet-assets-freezer/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-nfts/try-runtime",
	"pallet-ranked-collective/try-runtime",
	"pallet-referenda-tracks/try-runtime",
	"pallet-referenda/try-runtime",
	"pallet-scheduler/try-runtime",
	"sp-runtime/try-runtime",
]
