[package]
name = "pallet-communities"
version = "0.1.0"
authors = ["Virto Team<contact@virto.team>"]
description = "This pallet enables the creation of communities that are soverign entities with diverse forms of governance. In simpler terms, it can be considered a DAO Factory."
license = "MIT-0"
homepage = 'https://github.com/virto-network/virto-node'
repository = 'https://github.com/virto-network/virto-node'
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
frame-benchmarking = { workspace = true, optional = true }
frame-support =  { workspace = true }
frame-system = { workspace = true }
fc-traits-memberships = { workspace = true }

log = { workspace = true }

parity-scale-codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }

sp-runtime = { workspace = true }
sp-std = { workspace = true }
xcm = { workspace = true, optional = true }

[dev-dependencies]
sp-core = { workspace = true }
sp-io = { workspace = true }

pallet-assets = { workspace = true }
pallet-balances = { workspace = true }
pallet-nfts = { workspace = true }
pallet-preimage = { workspace = true }
pallet-referenda = { workspace = true }
pallet-referenda-tracks = { workspace = true }
pallet-scheduler = { workspace = true }
virto-common = { workspace = true, default-features = false, features = ["runtime"] }

[features]
default = ["std", "xcm", "testnet"]
testnet = []
std = [
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"fc-traits-memberships/std",
	"log/std",
	"pallet-assets/std",
	"pallet-balances/std",
	"pallet-nfts/std",
	"pallet-preimage/std",
	"pallet-referenda/std",
	"pallet-referenda-tracks/std",
	"pallet-scheduler/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"virto-common/std",
	"xcm?/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-nfts/runtime-benchmarks",
	"pallet-preimage/runtime-benchmarks",
	"pallet-referenda/runtime-benchmarks",
	"pallet-referenda-tracks/runtime-benchmarks",
	"pallet-scheduler/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-assets/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-nfts/try-runtime",
	"pallet-preimage/try-runtime",
	"pallet-referenda/try-runtime",
	"pallet-referenda-tracks/try-runtime",
	"pallet-scheduler/try-runtime",
	"sp-runtime/try-runtime",
]
