[package]
authors = ["Stanly Johnson <stanlyjohnson@outlook.com>"]
edition = '2018'
name = "vln-escrow"
version = "0.1.0"
license = "Unlicense"
homepage = "https://github.com/valibre-org/vln-node/"
repository = "https://github.com/valibre-org/vln-node/"
description = "Allows users to post escrow on-chain"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false, version = '3.0.0' }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false, version = '3.0.0' }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false, version = '3.0.0' }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
orml-traits = { git = "https://github.com/valibre-org/open-runtime-module-library", default-features = false }
orml-tokens = { git = "https://github.com/valibre-org/open-runtime-module-library", default-features = false }
vln-primitives = { version = "0.1.0", path = "../../primitives" }

[dev-dependencies]
serde = { version = "1.0.101" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false, version = '3.0.0' }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false, version = '3.0.0' }

[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'sp-runtime/std',
	'orml-traits/std',
	'sp-std/std',
	'orml-tokens/std'
]