[package]
authors = ["Daniel Olano <daniel@olanod.com>"]
edition = '2018'
name = "vln-foreign-asset"
version = "0.1.0"
license = "Unlicense"
homepage = "https://github.com/valibre-org/vln-node/"
repository = "https://github.com/valibre-org/vln-node/"
description = "Off-chain assets tokenized by an attester"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", default-features = false }
orml-traits = { git = "https://github.com/valibre-org/open-runtime-module-library", default-features = false }

[dev-dependencies]
serde = { version = "1.0.101" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", default-features = false }
orml-tokens = { git = "https://github.com/valibre-org/open-runtime-module-library", default-features = false }

[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'orml-traits/std',
]
